@@ -3,7 +3,6 @@ package barsuift.simLife.j2d.action;
 import java.awt.event.ActionEvent;
 
 import javax.swing.AbstractAction;
-import javax.swing.KeyStroke;
 
 import barsuift.simLife.time.TimeController;
 
@@ -15,11 +14,10 @@ public class SpeedAction extends AbstractAction {
     private final TimeController timeController;
 
     public SpeedAction(TimeController timeController, String name, String description, int mnemonic,
-            KeyStroke accelerator, String actionCommand) {
+            String actionCommand) {
         super();
         this.timeController = timeController;
         putValue(MNEMONIC_KEY, mnemonic);
-        putValue(ACCELERATOR_KEY, accelerator);
         putValue(ACTION_COMMAND_KEY, actionCommand);
         putValue(NAME, name);
         putValue(SHORT_DESCRIPTION, description);
