@@ -15,7 +15,8 @@ New features
 Replace the calendar system with a simpler date system
 Important internal rework to get rid of Observable/Observer and use homemade Publisher/Subscriber instead
 Important internal rework to add a synchronization framework to manage concurrent continuous actions (currently only used for date)
-File menu actions now stop the application before executing
+File menu actions now stop the application before executing its actions
+Addition of a speed "100" radio button 
 
 
 Bug fixes
